--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "prettier": "^2.6.2"
+        "prettier": "^2.6.2",
+        "prettier-plugin-tailwindcss": "^0.1.8"
     }
 }
